TORY-311 refactor: AffiliateService의 null 검사 로직을 Optional 기반으로 리팩토링